// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton avatar shape 1`] = `
<div class="gov-skeleton gov-skeleton-with-avatar">
  <div class="gov-skeleton-header"><span class="gov-skeleton-avatar gov-skeleton-avatar-lg gov-skeleton-avatar-circle"></span></div>
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 50%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar shape 2`] = `
<div class="gov-skeleton gov-skeleton-with-avatar">
  <div class="gov-skeleton-header"><span class="gov-skeleton-avatar gov-skeleton-avatar-lg gov-skeleton-avatar-square"></span></div>
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 50%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 1`] = `
<div class="gov-skeleton gov-skeleton-with-avatar">
  <div class="gov-skeleton-header"><span class="gov-skeleton-avatar gov-skeleton-avatar-sm gov-skeleton-avatar-circle"></span></div>
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 50%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 2`] = `
<div class="gov-skeleton gov-skeleton-with-avatar">
  <div class="gov-skeleton-header"><span class="gov-skeleton-avatar gov-skeleton-avatar-circle"></span></div>
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 50%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 3`] = `
<div class="gov-skeleton gov-skeleton-with-avatar">
  <div class="gov-skeleton-header"><span class="gov-skeleton-avatar gov-skeleton-avatar-lg gov-skeleton-avatar-circle"></span></div>
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 50%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph rows 1`] = `
<div class="gov-skeleton">
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 38%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 1`] = `
<div class="gov-skeleton">
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 38%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 93%;"></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 2`] = `
<div class="gov-skeleton">
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 38%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li style="width: 28%;"></li>
      <li style="width: 93%;"></li>
      <li></li>
    </ul>
  </div>
</div>
`;

exports[`Skeleton title width 1`] = `
<div class="gov-skeleton">
  <div class="gov-skeleton-content">
    <h3 class="gov-skeleton-title" style="width: 93%;"></h3>
    <ul class="gov-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>
`;
